[package]
name = "log_archiver"
version = "0.0.1"
authors = ["Kaan Karakaya"]
edition = "2018"
description = "A tool that archive logs by part of 100 mb"

readme = "README.md"
keywords = ["log", "archiver"]
license = "MIT"

[dependencies]
flate2 = "1.0.19"
ctrlc = { version = "3.0", features = ["termination"] }

[profile.dev]
opt-level = 3